# OrderbookAggregator

./: Cargo.toml  README.md
client/: Cargo.toml  build.rs
client/src/: main.rs  terminal_ui.rs
data_models/: Cargo.toml
data_models/src/: aggregated_orderbook.rs  exchange.rs  exchange_level.rs  exchange_orderbook.rs  level.rs  levels.rs  lib.rs  symbol.rs
exchange_client/: Cargo.toml
exchange_client/src/: client_re_exports.rs  exchange_client.rs  lib.rs
exchange_client/src/api/: configuration.rs  mod.rs  provider.rs
exchange_client/src/deserialization/: levels.rs  mod.rs  serde.rs
exchange_client/src/implementation/binance/: client.rs
exchange_client/src/implementation/bitstamp/: client.rs  mod.rs  subscription.rs
orderbook/: Cargo.toml
orderbook/src/: lib.rs
orderbook/src/api/: aggregator.rs  mod.rs  provider.rs
orderbook/src/implementation/: hashmap_aggregator.rs  mod.rs
server/: Cargo.toml
server/src/: main.rs
server/src/grpc/: grpc_server.rs  mod.rs  provider.rs
