[package]
name = "grpc_client"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.27.0"
prost = "0.13.1"
tokio = { version = "1.28.2", features = ["full"] }
tonic = "0.12.1"
tui = "0.19.0"


# workspaces
data_models = { path = "../data_models", version = "0.1.0" }

[build-dependencies]
tonic-build = { version = "0.12.1", features = ["prost"] }
