[package]
name = "exchange_client"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.28"
rayon = "1.7.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
tokio = { version = "1.28.2", features = ["full"] }
tokio-stream = "0.1.14"
url = "2.3.1"

# workspaces
data_models = { path = "../data_models", version = "0.1.0" }
orderbook = { path = "../orderbook", version = "0.1.0" }

[dev-dependencies]
rstest = "0.21.0"
async-std = { version = "1.5", features = ["attributes"] }