[package]
name = "grpc_server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.5"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
tonic = "0.12.1"
prost = "0.13.1"

# workspaces
exchange_client = { path = "../exchange_client", version = "0.1.0" }
data_models = { path = "../data_models", version = "0.1.0" }
orderbook = { path = "../orderbook", version = "0.1.0" }


[build-dependencies]
tonic-build = { version = "0.12.1", features = ["prost"] }